# Android_video_player

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/syy/study/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/common/: CommonTools.h  matrix.cpp
app/src/main/cpp/common/opensl_media/: opensl_es_context.cpp
app/src/main/cpp/video_player/: audio_output.cpp  video_output.cpp  video_output.h  video_player_controller.cpp  video_player_controller.h
app/src/main/cpp/video_player/decoder/: decoder_request_header.cpp  decoder_request_header.h  video_decoder.cpp  video_decoder.h
app/src/main/cpp/video_player/sync/: av_synchronizer.cpp  av_synchronizer.h
app/src/main/java/com/syy/studio/decoder/: MediaCodecDecoder.java  MediaCodecDecoderLifeCycle.java
app/src/main/java/com/syy/studio/player/: OnInitializedCallback.java  Player.java
app/src/main/java/com/syy/study/: MainActivity.java  PlayerActivity.java
app/src/main/jni/: Player.cpp  com_syy_studio_player_Player.h  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/syy/study/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
